# smart_order

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py  start_all.bat  test_address_routes.db  test_cart_routes.db  verify_chinese_encoding.py
agent/: assistant.py  mcp.py
api/: db.py  deps.py  main.py  schemas.py  security.py
data_pipeline/: README.md  __init__.py  cli.py  config.py  models.py
notes/: Pinecone向量数据库使用与核心知识.md  Python正则re包核心知识.md  Python调用MySQL核心知识.md
repository/: action_journal_repository.py  cart_repository.py  catalog_repository.py  coupon_repository.py  favorite_repository.py  order_repository.py  user_memory_repository.py  user_repository.py
service/: action_journal_service.py  agent_core.py  agent_loop.py  agent_planner.py  agent_state.py  assistant_composer.py  assistant_constraint_parser.py  assistant_models.py  assistant_orchestrator.py  assistant_retriever.py  assistant_service.py  assistant_session_store.py  assistant_stream_service.py  auth_service.py  cache.py  cart_service.py  catalog_service.py  config.py  confirmation_manager.py  constraint_resolver.py  conversation_store.py  coupon_service.py  diancan_service.py  embedding.py  favorite_service.py  grounded_responder.py  guardrails.py  intent_router.py  observability.py  order_events.py  order_service.py  query_refiner.py  rag_query_rewriter.py  rag_reranker.py  rag_retriever.py  tool_definitions.py  tool_registry.py  torch_device.py  user_memory_service.py  user_profile_service.py  (+1 more)
tests/: conftest.py  test_alembic_env.py  test_llm_tool.py  (+5 more)
(+273 files in other folders)
