[project]
name = "smart-order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mysql-connector-python~=9.4.0",
    "SQLAlchemy>=2.0.36",
    "alembic>=1.14.0",
    "pinecone~=7.3.0",
    "dashscope>=1.14.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic~=2.11.7",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "langgraph>=1.0.0",
    "sse-starlette>=1.6.0",
]
